* [Reporting] Fixed showing reports as diagrams fatal error
* [User Reporting] Fixed fatal error
* [Personal Calendar] Removed settings year due to the view not beeing available anymore
* [Forum Tool] Bugfix for the default forum and forum category for a course group
* [Course Tabs] Tabs that are fixed should not be allowed to be removed
* [Wiki Feedback] Added removed functionality for wiki page feedback
* [Youtube] Logout Fix
* [Youtube] Export movies fix
* [Youtube] Changed private to unlisted status of movies so they can be embedded
* [Rss] Added a decent message when settings are changed to refresh the homepage
* [Learning Path] Fix for prerequisites
* [Portfolio] Added a button to the portfolio of favourite users
* [Weblcms] Fixed new announcements table
* [LearningPath] Fixed double louding of learning path displays
* [Portfolio] Fixed javascript issue on last node
* [Portfolio] Fixed an error when feedback could not be viewed but could be created by the user
* [Assignment] Fixed fatal error when using importer
* [Weblcms] Fixed the not allowed message to show in the context of the tool, still making it possible to view other categories
* [LearningPath] Moved the navigation to the center of the screen
* [LearningPath] Making it possible to navigate with the arrows of the keyboard
* [LearningPath] Waiting for a learning path to set the flag to completed untill all the children have been viewed
* [LearningPath] Fixed the link to the progress overview
* [Assignment] Added a wizard for better usability in the add submission component, added a better confirmation message and added the option to send an email after a submission has been received
* [Repo Viewer] Fixed the importer to take the maximum number of selectable files into account
* [Common] Changed the way the css classes for columns are rendered, splitsing the css between header and content css

[02/06/2016]

* [Repository] Fixed fatal error in displayer block